--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -206,7 +206,7 @@
                 The first accessibility option uses an objectively legible font, Arial to represent all font families on
                 the web page. The purpose of the button is to change fonts used on the webpages, between Serif Fonts and
                 Sans Serif Fonts. There are studies that demonstrate how serif fonts are actually superior to sans serif
-                in many long texts (Arditi & Cho, 2005; Tinker, 1963). And there are studies that support sans serif
+                in many long texts (Arditi & Cho, 2005). And there are studies that support sans serif
                 typefaces as superior for people living with certain disabilities (such as certain visual challenges and
                 those who learn differently; Russell-Minda et al., 2007). Having a toogle button helps us to cater both
                 groups.<br />
@@ -279,26 +279,49 @@
                 timeline helps in understanding the flow of event.
             </p><br />
             <h2>Learning Outcome</h2>
-            <h3>Animating with CSS</h3>
             <p>
                 Throughout the project, one of the things I have learned is animating with CSS. CSS could be used to
                 transform page elements, such as moving, enlarging, fade, rotation and more complicated animation like
                 swimming koi fish which can be done with help of javascript. For this project, I built an animated
                 vertical timeline.
             </p><br />
-            <h3>Web Accessibility</h3>
             <p>
                 Web accessibility is kept in mind from the start. I read through WCAG Accessibility Standards and asked
                 around people in the industry what I should consider. The idea from that was to make the webpage
                 colour-blind friendly and reduce mouse use as much as possible. From there we went on with legibility,
                 underlining, grayscale filter and contrast toggle button.
             </p><br />
+            <p>
+                This project is also the first time I build filter buttons. Although it is not a foreign concept to me,
+                the code caused conflict and had me scratching my head for days to find out what killed my event
+                listener.
+            </p><br />
             <h2>What Worked Well</h2>
-            <h3></h3>
+            <p>
+                Accessibility Menu and Contrast Toggle button worked well on web site content. However, I couldn't
+                manage to have it work on twitter element. This is probably because it is from an external source that
+                loads later than everything.
+            </p><br />
+            <p>
+                The filter element worked well, as intended. More could be done to make it look better but I believe it
+                is already good enough. It looks good enough to fit the simple design of the website.
+            </p><br />
+            <p>
+                Fitting the timeline for smaller screen wasn't easy. After some tinkering with sizes, I managed to make
+                it work on smaller screen without overflow.
+            </p><br />
             <h2>What Didn't Work Well</h2>
             <p>
                 I tried to implement a horizontal timeline for 'company history' but I couldn't decide the design and
                 how it would adapt to screensize so I dropped the idea.
+            </p><br />
+            <p>
+                The webpages likely will break on extremely wide screen. I couldn't test and adjust it myself as I have
+                no access to those screens.
+            </p><br />
+            <p>
+                The webpages are too bland. I would like to add more interactive elements and animations if I am given
+                more time. One of the scrapped idea was a loading screen.
             </p><br />
             <h2>Resources</h2>
             <p>
@@ -368,6 +391,14 @@
             <p>
                 Nintendo UK, 'Pokémon Scarlet & Violet - Welcome to the Paldea region! (Nintendo Switch)', 2023.
                 [Online]. Available: https://youtu.be/kdju_9bGMv8 [Accessed:22-Feb-2023]
+            </p><br />
+            <p>
+                Arditi and Cho, 'Serifs and font legibility', 2005. [Online]. Available:
+                https://www.sciencedirect.com/science/article/pii/S0042698905003007 [Accessed:28-Feb-2023]
+            </p><br />
+            <p>
+                Russell-Minda et al., 'The Legibility of Typefaces for Readers with Low Vision: A Research Review',
+                2007. J Vis Impair Blind. 101. 10.1177/0145482X0710100703.
             </p><br />
             <h2>Appendix</h2>
         </section>
