--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -400,7 +400,34 @@
                 Russell-Minda et al., 'The Legibility of Typefaces for Readers with Low Vision: A Research Review',
                 2007. J Vis Impair Blind. 101. 10.1177/0145482X0710100703.
             </p><br />
-            <h2>Appendix</h2>
+            <p>
+                imperialtrace, 'You can just "Press A" your way through 9 out of 18 Raid types with these three
+                Pokemon', 2022. [Online]. Available:
+                https://www.reddit.com/r/PokemonScarletViolet/comments/znhnpz/you_can_just_press_a_your_way_through_9_out_of_18/
+                [Accessed:20-Feb-2023]
+            </p>
+            <h2>Wireframes</h2>
+            <h3>Desktop</h3>
+            <figure>
+                <img src="report/homepage-desktop-wireframe.png" alt="homepage wireframe for desktop">
+                <figcaption>Homepage Wireframe for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/current-news-desktop-wireframe.png" alt="current news wireframe for desktop">
+                <figcaption>Current News Wireframe for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/raid-desktop-wireframe.png" alt="Raid Guide wireframe for desktop">
+                <figcaption>Raid Guide Wireframe for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/paldea-desktop-wireframe.png" alt="About Paldea wireframe for desktop">
+                <figcaption>About Paldea Wireframe for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/about-us-desktop wireframe.png" alt="About Us wireframe for desktop">
+                <figcaption>About Us Wireframe for Desktop</figcaption>
+            </figure><br />
         </section>
     </main>
 
