--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -217,7 +217,7 @@
                 those unfamiliar with technology to identify them.<br />
 
                 The third accessibility option offers a grayscale mode, which removes bright and distracting saturated
-                colours for general users and improves readability for colour-blind users. This further reduces eye
+                colours for general users and improves readability for colour-blind users. This would further reduces eye
                 strain under low light conditions, especially for dense blocks of text. It is also helpful for users who
                 access the website with e-ink screen devices like Nook or Amazon Paperwhite.<br />
 
@@ -240,7 +240,7 @@
             <h3>Back-to-top button to reduce vertical scrolling</h3>
             <p>
                 Vertical scrolling could be a daunting task for those with motor disability, especially older
-                individuals with Arthritis. Back-to-top button can help people with mobility issues navigate the page
+                individuals with arthritis. Back-to-top button also can help people with mobility issues navigate the page
                 more easily, it reduces strain on fingers and wrist. It also helps people to save time. The back to top
                 button is especially helpful for people using mobile devices. It decreases the swiping they have to do
                 to get back to the top of a page.
@@ -374,27 +374,27 @@
             <p>
                 Archaic, 'Patch notes released for Pokémon Scarlet and Violet's Version 1.2.0 update - Update still
                 scheduled for release in late February', 2023. [Online]. Available:
-                https://www.bulbagarden.net/threads/296171 [Accessed:18-Feb-2023]
+                https://www.bulbagarden.net/threads/296171 [Accessed: 18-Feb-2023]
             </p><br />
             <p>
                 gamewith.net, 'Best Pokemon For Tera Raid Battles & Team Raid Tips', 2023. [Online]. Available:
-                https://gamewith.net/pokemon-scarletviolet/article/show/37197 [Accessed:20-Feb-2023]
+                https://gamewith.net/pokemon-scarletviolet/article/show/37197 [Accessed: 20-Feb-2023]
             </p><br />
             <p>
                 game8.co, 'Tera Raid Tips and Battle Mechanics | Pokemon Scarlet and Violet (SV)', 2023. [Online].
-                Available: https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 [Accessed:20-Feb-2023]
+                Available: https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 [Accessed: 20-Feb-2023]
             </p><br />
             <p>
                 bulbapedia, 'Paldea', 2023. [Online]. Available: https://bulbapedia.bulbagarden.net/wiki/Paldea
-                [Accessed:23-Feb-2023]
+                [Accessed: 23-Feb-2023]
             </p><br />
             <p>
                 Nintendo UK, 'Pokémon Scarlet & Violet - Welcome to the Paldea region! (Nintendo Switch)', 2023.
-                [Online]. Available: https://youtu.be/kdju_9bGMv8 [Accessed:22-Feb-2023]
+                [Online]. Available: https://youtu.be/kdju_9bGMv8 [Accessed: 22-Feb-2023]
             </p><br />
             <p>
                 Arditi and Cho, 'Serifs and font legibility', 2005. [Online]. Available:
-                https://www.sciencedirect.com/science/article/pii/S0042698905003007 [Accessed:28-Feb-2023]
+                https://www.sciencedirect.com/science/article/pii/S0042698905003007 [Accessed: 28-Feb-2023]
             </p><br />
             <p>
                 Russell-Minda et al., 'The Legibility of Typefaces for Readers with Low Vision: A Research Review',
@@ -402,10 +402,11 @@
             </p><br />
             <p>
                 imperialtrace, 'You can just "Press A" your way through 9 out of 18 Raid types with these three
-                Pokemon', 2022. [Online]. Available:
-                https://www.reddit.com/r/PokemonScarletViolet/comments/znhnpz/you_can_just_press_a_your_way_through_9_out_of_18/
-                [Accessed:20-Feb-2023]
+                Pokemon', 2022. [Online]. Available:wireframe
+                https://www.reddit.com/r/PokemonScarletViolet/comments/znhnpz/you_can_just_press _a_your_way_through_9_out_of_18
+                [Accessed: 20-Feb-2023]
             </p>
+            <h2>Site Map</h2>
             <h2>Wireframes</h2>
             <h3>Desktop</h3>
             <figure>
@@ -425,9 +426,32 @@
                 <figcaption>About Paldea Wireframe for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-desktop wireframe.png" alt="About Us wireframe for desktop">
+                <img src="report/about-us-desktop-wireframe.png" alt="About Us wireframe for desktop">
                 <figcaption>About Us Wireframe for Desktop</figcaption>
             </figure><br />
+            <h3>Mobile</h3>
+            <figure>
+                <img src="report/homepage-mobile-wireframe.png" alt="homepage wireframe for mobile">
+                <figcaption>Homepage Wireframe for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/current-news-mobile-wireframe.png" alt="current news wireframe for mobile">
+                <figcaption>Current News Wireframe for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/raid-mobile-wireframe.png" alt="Raid Guide wireframe for mobile">
+                <figcaption>Raid Guide Wireframe for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/paldea-mobile-wireframe.png" alt="About Paldea wireframe for mobile">
+                <figcaption>About Paldea Wireframe for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/about-us-mobile-wireframe.png" alt="About Us wireframe for mobile">
+                <figcaption>About Us Wireframe for Mobile</figcaption>
+            </figure><br />
+            <h3>Tablet</h3>
+            <h2>Mock Ups</h2>
         </section>
     </main>
 
