--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -407,7 +407,12 @@
                 [Accessed: 20-Feb-2023]
             </p>
             <h2>Site Map</h2>
+            <figure>
+                <img src="report/sitemap.png" alt="sitemap">
+                <figcaption>Sitemap</figcaption>
+            </figure><br />
             <h2>Wireframes</h2>
+            <p>I used Excalidraw for this, sizes are not to scale. A lot of changes and adjustment were made during the project but the idea remain the same.</p><br />
             <h3>Desktop</h3>
             <figure>
                 <img src="report/homepage-desktop-wireframe.png" alt="homepage wireframe for desktop">
@@ -451,6 +456,26 @@
                 <figcaption>About Us Wireframe for Mobile</figcaption>
             </figure><br />
             <h3>Tablet</h3>
+            <figure>
+                <img src="report/homepage-tablet-wireframe.png" alt="homepage wireframe for tablet">
+                <figcaption>Homepage Wireframe for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/current-news-tablet-wireframe.png" alt="current news wireframe for tablet">
+                <figcaption>Current News Wireframe for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/raid-tablet-wireframe.png" alt="Raid Guide wireframe for tablet">
+                <figcaption>Raid Guide Wireframe for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/paldea-tablet-wireframe.png" alt="About Paldea wireframe for tablet">
+                <figcaption>About Paldea Wireframe for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/about-us-tablet-wireframe.png" alt="About Us wireframe for tablet">
+                <figcaption>About Us Wireframe for Tablet</figcaption>
+            </figure><br />
             <h2>Mock Ups</h2>
         </section>
     </main>
