keep png as backups

--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -217,9 +217,9 @@
                 those unfamiliar with technology to identify them.<br />
 
                 The third accessibility option offers a grayscale mode, which removes bright and distracting saturated
-                colours for general users and improves readability for colour-blind users. This would further reduces eye
-                strain under low light conditions, especially for dense blocks of text. It is also helpful for users who
-                access the website with e-ink screen devices like Nook or Amazon Paperwhite.<br />
+                colours for general users and improves readability for colour-blind users. This would further reduces
+                eye strain under low light conditions, especially for dense blocks of text. It is also helpful for users
+                who access the website with e-ink screen devices like Nook or Amazon Paperwhite.<br />
 
                 Each accessibility option button is accompanied by a corresponding high-contrast tooltip that
                 clearly indicates the accessibility feature. This user-triggered GUI element becomes visible when a
@@ -240,10 +240,10 @@
             <h3>Back-to-top button to reduce vertical scrolling</h3>
             <p>
                 Vertical scrolling could be a daunting task for those with motor disability, especially older
-                individuals with arthritis. Back-to-top button also can help people with mobility issues navigate the page
-                more easily, it reduces strain on fingers and wrist. It also helps people to save time. The back to top
-                button is especially helpful for people using mobile devices. It decreases the swiping they have to do
-                to get back to the top of a page.
+                individuals with arthritis. Back-to-top button also can help people with mobility issues navigate the
+                page more easily, it reduces strain on fingers and wrist. It also helps people to save time. The back to
+                top button is especially helpful for people using mobile devices. It decreases the swiping they have to
+                do to get back to the top of a page.
             </p><br />
             <h2>Usability</h2>
             <h3>Responsive layout and a toggleable hamburger menu to accommodate smaller screen sizes</h3>
@@ -385,7 +385,7 @@
                 Available: https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 [Accessed: 20-Feb-2023]
             </p><br />
             <p>
-                bulbapedia, 'Paldea', 2023. [Online]. Available: https://bulbapedia.bulbagarden.net/wiki/Paldea
+                bulbapedia, 'Paldea', 2022. [Online]. Available: https://bulbapedia.bulbagarden.net/wiki/Paldea
                 [Accessed: 23-Feb-2023]
             </p><br />
             <p>
@@ -402,17 +402,30 @@
             </p><br />
             <p>
                 imperialtrace, 'You can just "Press A" your way through 9 out of 18 Raid types with these three
-                Pokemon', 2022. [Online]. Available:wireframe
-                https://www.reddit.com/r/PokemonScarletViolet/comments/znhnpz/you_can_just_press _a_your_way_through_9_out_of_18
+                Pokemon', 2022. [Online]. Available:
+                https://www.reddit.com/r/PokemonScarletViolet/comments/znhnpz/you_can_just_press_a_your_way_through_9_out_of_18
                 [Accessed: 20-Feb-2023]
             </p>
+            <h2>References</h2>
+            <p>Throughout the project, these websites have been specially helpful</p><br />
+            <p><a href="https://www.w3schools.com/html/html_links.asp">W3 Schools</a></p><br />
+            <p><a href="https://www.fontawesome.com">Font Awesome</a></p><br />
+            <p><a href="https://kotaku.com/">Kotaku</a></p><br />
+            <p><a href="https://sharedjklghtgu.labs.coursera.org/">All Things Volleyball</a></p><br />
+            <p><a href="https://gamewith.net/pokemon-scarletviolet/article/show/37197">Gamewith</a></p><br />
+            <p><a href="https://sharedckgykpiq.labs.coursera.org/">Anime Website</a></p><br />
+            <p><a href="https://sharedvwdbohhv.labs.coursera.org/">Chess News</a></p><br />
+            <p><a href="https://www.w3.org/WAI/standards-guidelines/wcag/">WCAG 2 Overview</a></p><br />
+            <p><a href="https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344">Game8</a></p><br />
+            <p><a href="https://fonts.google.com">Google Fonts</a></p><br />
             <h2>Site Map</h2>
             <figure>
                 <img src="report/sitemap.png" alt="sitemap">
                 <figcaption>Sitemap</figcaption>
             </figure><br />
             <h2>Wireframes</h2>
-            <p>I used Excalidraw for this, sizes are not to scale. A lot of changes and adjustment were made during the project but the idea remain the same.</p><br />
+            <p>I used Excalidraw for this, sizes are not to scale. A lot of changes and adjustment were made during the
+                project but the idea remain the same.</p><br />
             <h3>Desktop</h3>
             <figure>
                 <img src="report/homepage-desktop-wireframe.png" alt="homepage wireframe for desktop">
@@ -477,6 +490,70 @@
                 <figcaption>About Us Wireframe for Tablet</figcaption>
             </figure><br />
             <h2>Mock Ups</h2>
+            <p>Please note that certain elements like embed Twitter posts and animated timeline do not appear correctly.</p><br />    
+            <h3>Desktop</h3>
+            <figure>
+                <img src="report/homepage-desktop-mockup.png" alt="homepage mockup for desktop">
+                <figcaption>Homepage Mockup for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/current-news-desktop-mockup.png" alt="current news mockup for desktop">
+                <figcaption>Current News Mockup for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/raid-desktop-mockup.png" alt="Raid Guide mockup for desktop">
+                <figcaption>Raid Guide Mockup for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/paldea-desktop-mockup.png" alt="About Paldea mockup for desktop">
+                <figcaption>About Paldea Mockup for Desktop</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/about-us-desktop-mockup.png" alt="About Us mockup for desktop">
+                <figcaption>About Us Mockup for Desktop</figcaption>
+            </figure><br />
+            <h3>Mobile</h3>
+            <figure>
+                <img src="report/homepage-mobile-mockup.png" alt="homepage mockup for mobile">
+                <figcaption>Homepage Mockup for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/current-news-mobile-mockup.png" alt="current news mockup for mobile">
+                <figcaption>Current News Mockup for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/raid-mobile-mockup.png" alt="Raid Guide mockup for mobile">
+                <figcaption>Raid Guide Mockup for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/paldea-mobile-mockup.png" alt="About Paldea mockup for mobile">
+                <figcaption>About Paldea Mockup for Mobile</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/about-us-mobile-mockup.png" alt="About Us mockup for mobile">
+                <figcaption>About Us Mockup for Mobile</figcaption>
+            </figure><br />
+            <h3>Tablet</h3>
+            <figure>
+                <img src="report/homepage-tablet-mockup.png" alt="homepage mockup for tablet">
+                <figcaption>Homepage Mockup for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/current-news-tablet-mockup.png" alt="current news mockup for tablet">
+                <figcaption>Current News Mockup for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/raid-tablet-mockup.png" alt="Raid Guide mockup for tablet">
+                <figcaption>Raid Guide Mockup for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/paldea-tablet-mockup.png" alt="About Paldea mockup for tablet">
+                <figcaption>About Paldea Mockup for Tablet</figcaption>
+            </figure><br />
+            <figure>
+                <img src="report/about-us-tablet-mockup.png" alt="About Us mockup for tablet">
+                <figcaption>About Us Mockup for Tablet</figcaption>
+            </figure><br />
         </section>
     </main>
 
