--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -167,9 +167,6 @@
                 <img src="report/kotaku-latest-desktop.jpg" alt="Kotaku Latest News Page">
                 <figcaption>Kotaku Latest News Page</figcaption>
             </figure><br />
-            <p>
-                I will give a more detailed breakdown on the thought process in the appendix.
-            </p><br />
             <h3>Gamewith</h3>
             <p>
                 Gamewith is a Japanese gaming site. Although it also provide content in English, sometimes translation
@@ -420,7 +417,7 @@
             <p><a href="https://fonts.google.com">Google Fonts</a></p><br />
             <h2>Site Map</h2>
             <figure>
-                <img src="report/sitemap.png" alt="sitemap">
+                <img src="report/sitemap.jpeg" alt="sitemap">
                 <figcaption>Sitemap</figcaption>
             </figure><br />
             <h2>Wireframes</h2>
@@ -428,130 +425,130 @@
                 project but the idea remain the same.</p><br />
             <h3>Desktop</h3>
             <figure>
-                <img src="report/homepage-desktop-wireframe.png" alt="homepage wireframe for desktop">
+                <img src="report/homepage-desktop-wireframe.jpeg" alt="homepage wireframe for desktop">
                 <figcaption>Homepage Wireframe for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/current-news-desktop-wireframe.png" alt="current news wireframe for desktop">
+                <img src="report/current-news-desktop-wireframe.jpeg" alt="current news wireframe for desktop">
                 <figcaption>Current News Wireframe for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/raid-desktop-wireframe.png" alt="Raid Guide wireframe for desktop">
+                <img src="report/raid-desktop-wireframe.jpeg" alt="Raid Guide wireframe for desktop">
                 <figcaption>Raid Guide Wireframe for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/paldea-desktop-wireframe.png" alt="About Paldea wireframe for desktop">
+                <img src="report/paldea-desktop-wireframe.jpeg" alt="About Paldea wireframe for desktop">
                 <figcaption>About Paldea Wireframe for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-desktop-wireframe.png" alt="About Us wireframe for desktop">
+                <img src="report/about-us-desktop-wireframe.jpeg" alt="About Us wireframe for desktop">
                 <figcaption>About Us Wireframe for Desktop</figcaption>
             </figure><br />
             <h3>Mobile</h3>
             <figure>
-                <img src="report/homepage-mobile-wireframe.png" alt="homepage wireframe for mobile">
+                <img src="report/homepage-mobile-wireframe.jpeg" alt="homepage wireframe for mobile">
                 <figcaption>Homepage Wireframe for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/current-news-mobile-wireframe.png" alt="current news wireframe for mobile">
+                <img src="report/current-news-mobile-wireframe.jpeg" alt="current news wireframe for mobile">
                 <figcaption>Current News Wireframe for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/raid-mobile-wireframe.png" alt="Raid Guide wireframe for mobile">
+                <img src="report/raid-mobile-wireframe.jpeg" alt="Raid Guide wireframe for mobile">
                 <figcaption>Raid Guide Wireframe for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/paldea-mobile-wireframe.png" alt="About Paldea wireframe for mobile">
+                <img src="report/paldea-mobile-wireframe.jpeg" alt="About Paldea wireframe for mobile">
                 <figcaption>About Paldea Wireframe for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-mobile-wireframe.png" alt="About Us wireframe for mobile">
+                <img src="report/about-us-mobile-wireframe.jpeg" alt="About Us wireframe for mobile">
                 <figcaption>About Us Wireframe for Mobile</figcaption>
             </figure><br />
             <h3>Tablet</h3>
             <figure>
-                <img src="report/homepage-tablet-wireframe.png" alt="homepage wireframe for tablet">
+                <img src="report/homepage-tablet-wireframe.jpeg" alt="homepage wireframe for tablet">
                 <figcaption>Homepage Wireframe for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/current-news-tablet-wireframe.png" alt="current news wireframe for tablet">
+                <img src="report/current-news-tablet-wireframe.jpeg" alt="current news wireframe for tablet">
                 <figcaption>Current News Wireframe for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/raid-tablet-wireframe.png" alt="Raid Guide wireframe for tablet">
+                <img src="report/raid-tablet-wireframe.jpeg" alt="Raid Guide wireframe for tablet">
                 <figcaption>Raid Guide Wireframe for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/paldea-tablet-wireframe.png" alt="About Paldea wireframe for tablet">
+                <img src="report/paldea-tablet-wireframe.jpeg" alt="About Paldea wireframe for tablet">
                 <figcaption>About Paldea Wireframe for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-tablet-wireframe.png" alt="About Us wireframe for tablet">
+                <img src="report/about-us-tablet-wireframe.jpeg" alt="About Us wireframe for tablet">
                 <figcaption>About Us Wireframe for Tablet</figcaption>
             </figure><br />
             <h2>Mock Ups</h2>
             <p>Please note that certain elements like embed Twitter posts and animated timeline do not appear correctly.</p><br />    
             <h3>Desktop</h3>
             <figure>
-                <img src="report/homepage-desktop-mockup.png" alt="homepage mockup for desktop">
+                <img src="report/homepage-desktop-mockup.jpeg" alt="homepage mockup for desktop">
                 <figcaption>Homepage Mockup for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/current-news-desktop-mockup.png" alt="current news mockup for desktop">
+                <img src="report/current-news-desktop-mockup.jpeg" alt="current news mockup for desktop">
                 <figcaption>Current News Mockup for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/raid-desktop-mockup.png" alt="Raid Guide mockup for desktop">
+                <img src="report/raid-desktop-mockup.jpeg" alt="Raid Guide mockup for desktop">
                 <figcaption>Raid Guide Mockup for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/paldea-desktop-mockup.png" alt="About Paldea mockup for desktop">
+                <img src="report/paldea-desktop-mockup.jpeg" alt="About Paldea mockup for desktop">
                 <figcaption>About Paldea Mockup for Desktop</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-desktop-mockup.png" alt="About Us mockup for desktop">
+                <img src="report/about-us-desktop-mockup.jpeg" alt="About Us mockup for desktop">
                 <figcaption>About Us Mockup for Desktop</figcaption>
             </figure><br />
             <h3>Mobile</h3>
             <figure>
-                <img src="report/homepage-mobile-mockup.png" alt="homepage mockup for mobile">
+                <img src="report/homepage-mobile-mockup.jpeg" alt="homepage mockup for mobile">
                 <figcaption>Homepage Mockup for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/current-news-mobile-mockup.png" alt="current news mockup for mobile">
+                <img src="report/current-news-mobile-mockup.jpeg" alt="current news mockup for mobile">
                 <figcaption>Current News Mockup for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/raid-mobile-mockup.png" alt="Raid Guide mockup for mobile">
+                <img src="report/raid-mobile-mockup.jpeg" alt="Raid Guide mockup for mobile">
                 <figcaption>Raid Guide Mockup for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/paldea-mobile-mockup.png" alt="About Paldea mockup for mobile">
+                <img src="report/paldea-mobile-mockup.jpeg" alt="About Paldea mockup for mobile">
                 <figcaption>About Paldea Mockup for Mobile</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-mobile-mockup.png" alt="About Us mockup for mobile">
+                <img src="report/about-us-mobile-mockup.jpeg" alt="About Us mockup for mobile">
                 <figcaption>About Us Mockup for Mobile</figcaption>
             </figure><br />
             <h3>Tablet</h3>
             <figure>
-                <img src="report/homepage-tablet-mockup.png" alt="homepage mockup for tablet">
+                <img src="report/homepage-tablet-mockup.jpeg" alt="homepage mockup for tablet">
                 <figcaption>Homepage Mockup for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/current-news-tablet-mockup.png" alt="current news mockup for tablet">
+                <img src="report/current-news-tablet-mockup.jpeg" alt="current news mockup for tablet">
                 <figcaption>Current News Mockup for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/raid-tablet-mockup.png" alt="Raid Guide mockup for tablet">
+                <img src="report/raid-tablet-mockup.jpeg" alt="Raid Guide mockup for tablet">
                 <figcaption>Raid Guide Mockup for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/paldea-tablet-mockup.png" alt="About Paldea mockup for tablet">
+                <img src="report/paldea-tablet-mockup.jpeg" alt="About Paldea mockup for tablet">
                 <figcaption>About Paldea Mockup for Tablet</figcaption>
             </figure><br />
             <figure>
-                <img src="report/about-us-tablet-mockup.png" alt="About Us mockup for tablet">
+                <img src="report/about-us-tablet-mockup.jpeg" alt="About Us mockup for tablet">
                 <figcaption>About Us Mockup for Tablet</figcaption>
             </figure><br />
         </section>
